Added cards in UseCases page also

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -326,7 +326,7 @@ let colorP = false;
             </a>
 
             <div class="flex-row hidden pt-8 pr-16 space-x-6 md:flex ">
-              <a href="/usecases">
+              <a href="/useCases">
                 <p class="text-gray-400  hover:text-blue-500">Use Cases</p>
               </a>
             </div>
