Added types of sectors(filtering left)

--- a/src/pages/useCases.astro
+++ b/src/pages/useCases.astro
@@ -315,7 +315,7 @@ const modalProps = {
 
       <!-- Intelligence Automated block -->
 
-      <section class="w-full mx-auto -mt-24">
+      <!-- <section class="w-full mx-auto -mt-24">
         <div
           class="container px-4 pt-32 mx-auto text-center max-w-screen-2xl md:pt-40 lg:pt-48 2xl:pt-56"
         >
@@ -342,7 +342,7 @@ const modalProps = {
             </button>
           </a>
         </div>
-      </section>
+      </section> -->
 
       <UseCasesComponent />
 
