Completed Usecases page

--- a/src/pages/useCases.astro
+++ b/src/pages/useCases.astro
@@ -344,7 +344,7 @@ const modalProps = {
         </div>
       </section> -->
 
-      <UseCasesComponent />
+      <UseCasesComponent client:visible />
 
       <!-- get started now -->
 
